[package]
name = "frameshop"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = "Image processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
photon-rs = { git = "https://github.com/karthik2804/photon", branch = "wasi_feature_gating", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
] }
